[package]
name = "axum-with-seaorm"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AxumCourse/axum-with-seaorm"
homepage = "https://axum.rs"
description = "axum.rs专题：axum使用SeaORM"



[dependencies]
axum="0.5.6"
tokio={ version="1.19.0", features=["full"] }
serde = { version="1.0.137", features = ["derive"] }
sea-orm={version="0.9.1", features=["sqlx-postgres", "runtime-tokio-native-tls", "macros", "debug-print"]}
askama="0.11.1"
config="0.13.1"
dotenv="0.15.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
chrono = "0.4.19"
